5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1795_3141.log
== TEST (2019-05-30 16:32:10) 
-- CODE:
from numpy import
v= array(eval(input("Insira seu vetor")))
i=0
exp=1/6

while(i< size(v)):
	v=v[i]**exp
	v=v[-1]**exp
	v=v**6
print(round(v,2))
-- ERROR:
File "XXXX", line 1
    from numpy import
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:32:15) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
exp=1/6

while(i< size(v)):
	v=v[i]**exp
	v=v[-1]**exp
	v=v**6
print(round(v,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:08) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
exp=1/6

while(i< size(v)):
	v=v[i]**exp
	v=(v[-1]-1)**exp
	v=v**6
print(round(v,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:22) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
exp=1/6

while(i< size(v)):
	v=v[i]**exp
	v=(v[-1]-1)**1/6
	v=v**6
print(round(v,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:49) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
exp=1/6

while(i< size(v)):
	v=v[i]**exp
	v=(v[:-1]-1)**exp
	v=v**6
print(round(v,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:35:13) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
exp=1/6
print(v[-1])
while(i< size(v)):
	v=v[i]**exp
	v=(v[-1]-1)**exp
	v=v**6
print(round(v,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:05) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
e=1/6
print(v[-1])
while(i< size(v)):
	v=v[i]**e
	v=(v[-1]-1)**e
	v=v**6
print(round(v,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:01) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
e=1/6
print((v[-1]-1)**e)
while(i< size(v)):
	v=v[i]**e
	v=(v[-1]-1)**e
	v=v**6
print(round(v,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:38:39) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
e=1/6

while(i< size(v)):
	v=v[i]**e
	v0=(v[-1]-1)**e
	vt=v**6

print(round(v,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:39:55) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
e=1/6

while(i< size(v)):
	v=v[i]**e
	v0= v[-1]-1**e
	vt=v**6
	i+=1
print(round(v,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:42:30) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
e=1/6
vt=0
while(i< size(v)):
	v= v[i]**e
	v0= (size(v)-1)**e
	vt= (v+vo/size(v))**6
	
	i+=1
print(round(vt,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:42:45) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
e=1/6
vt=0
v0=0
while(i< size(v)):
	v= v[i]**e
	v0= (size(v)-1)**e
	vt= (v+vo/size(v))**6
	
	i+=1
print(round(vt,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:43:15) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
e=1/6
vt=0
vo=0
while(i< size(v)):
	v= v[i]**e
	v0= (size(v)-1)**e
	vt= (v+vo/size(v))**6
	i+=1
print(round(vt,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:44:52) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
e=1/6
vt=0
vu=size(vu)

while(i< size(v)):
	v= v[i]**e
	vu=vu-1**e	
	vt=vu+v
	i+=1

print(round(vt,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:04) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
e=1/6
vt=0
vu=size(vu)

while(i< size(v)):
	v= v[i]**e
	vu=vu-1**e	
	vt=vu+v
	i+=1

print(round(vt,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:14) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
e=1/6
vt=0
vu=size(v)

while(i< size(v)):
	v= v[i]**e
	vu=vu-1**e	
	vt=vu+v
	i+=1

print(round(vt,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:34) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
e=1/6
vt=0
vu=size(v)

while(i< size(v)):
	v= v[i]**e
	vu=vu-1**e	
	vt=(vu+v/n)**6
	i+=1

print(round(vt,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:42) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
e=1/6
vt=0
vu=size(v)

while(i< size(v)):
	v= v[i]**e
	vu=vu-1**e	
	vt=(vu+v/vu)**6
	i+=1

print(round(vt,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:56) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
e=1/6
vt=0
vu=size(v)

while(i< size(v)):
	v= v[i]**e

	i+=1
vu=vu-1**e
vt=(v+v/vu)**6
print(round(vt,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:47:30) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
e=1/6
vt=0
vu=size(v)

while(i< size(v)):
	v= v[i]**(1/6)

	i+=1
vu=vu-1**(1/6)
vt=(v+v/vu)**6
print(round(vt,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:31) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
e=1/6
vt=0
vu=size(v)

while(i< size(v)):
	v= v[i]**e
	vu=(vu-1)**e	
	vt=(v+v/vu)**6
	i+=1

print(round(vt,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:08) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
e=1/6
vt=0
vu=size(v)
v1= v**e
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:53:18) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
e=1/6

vu=size(v)
v1= v**e
v2=vu-1**e
vt= v1+v2**6

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:53:27) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
e=1/6

vu=size(v)
v1= v**e
v2=vu-1**e
vt= v1+v2**6
print(vt)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:53:53) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
e=1/6
print(e)
vu=size(v)
v1= v**e
v2=vu-1**e
vt= v1+v2**6
print(vt)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:54:38) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
e=1/6

vu=size(v)
v1= v**e
v2=vu-1**e
vt= v1+v2/vu**6
print(round(vt,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:35:07) 
-- CODE:
from numpy import*
v= array(eval(input("Insira seu vetor")))
i=0
e=1/6

vu=size(v)
v1= v**e
v2=vu-1**e

vt= v1+v2/vu**6

print(round(vt,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
